# django-datadog-logger

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: pr-checks.yml
ddl/: celery.py  wsgi.py
ddl/formatters/: datadog.py
ddl/middleware/: request_id.py  request_log.py
ddl/rest_framework/: mixins.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_django_datadog_logger.py
